[metadata]
name = progiter
version = 2.0.0
author = Jon Crall
author_email = erotemic@gmail.com
url = https://github.com/chrisjihee/progiter
description = A single-threaded alternative to tqdm.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = True
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    rich>=12.3.0

[options.packages.find]
where = src
